fixed align on city-boxes

--- a/css/queries.css
+++ b/css/queries.css
@@ -119,9 +119,11 @@
         .city-box {
             margin-bottom: 10px;
             font-size:16px;
+            text-align: center;
         }
         .flex-align {
-            padding: 0 25%;
+            display: inline-block;
+            text-align: left;
         }
         .section-testimonials .row .col blockquote {
             font-size: 16px;
